<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedPins</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">335179273261206</string>

    <color name="gray">#F0F0F0</color>

    <string name="logout">Logout</string>
    <string name="Nearby">Nearby</string>
    <string name="Recommendations">Recommended Events</string>
    <string name="Subscriptions">Subscriptions</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Profile">Profile</string>
    <string name="History">History</string>
    <string name="AddEvent">Add Event</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_legal">Legal Notice</string>
    <string name="legal_notice">LEGAL NOTICE</string>
    <string name="null_val">NULL</string>
    <string name="to_mapview">To the Map</string>
    <string name="to_listview">To Search List</string>
    <string name="home">HOME</string>
    <string name="search_hint">Search by tags</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="Set_Rails_App_Url">Set Rails App Url</string>
    <string name="upload_photo">Upload Photo</string>

</resources>