<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alignmentMode="alignMargins"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:columnCount="2"
    android:rowCount="3">

    <LinearLayout
        android:id="@+id/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:onClick="historyOnClick"
        android:orientation="vertical"
        android:layout_margin="30dp" >

        <ImageView
            android:id="@+id/HistoryImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/history_selector" />

        <TextView
            android:id="@+id/HistoryText"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/History"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:onClick="bookmarksOnClick"
        android:layout_margin="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/BookmarksImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/bookmarks_selector" />

        <TextView
            android:id="@+id/BookmarksText"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/Bookmarks"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:onClick="addEventOnClick"
        android:layout_margin="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/AddEventImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/add_event_selector" />

        <TextView
            android:id="@+id/AddEventText"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/AddEvent"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Recommendations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_margin="30dp"
        android:onClick="recommendationsOnClick"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/RecommendationsImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/recommendation_selector" />

        <TextView
            android:id="@+id/RecommendationsText"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Recommendations"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_margin="30dp"
        android:layout_row="0"
        android:onClick="profileOnClick"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ProfileImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/profile_selector" />

        <TextView
            android:id="@+id/ProfileText"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/Profile"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_margin="30dp"
        android:layout_row="0"
        android:onClick="nearbyOnClick"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/NearbyImg"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/nearby_selector" />

        <TextView
            android:id="@+id/NearbyText"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/Nearby"
            android:textAlignment="viewStart" />
    </LinearLayout>

</GridLayout>
